added auth routes and userRoutes
