# Routes/Auth.js
@@ -1,9 +1,0 @@
-import express from 'express'
-import { login, register } from '../Controllers/Auth.js';
-
-const router = express.Router();
-
-router.post('/register',register);
-router.post('/login',login);
-
-export default router;
